# acp

./: .gitignore  Makefile  README.md  build_log.txt  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
acp-api/: README.md  pyproject.toml
acp-api/acp_api/: __init__.py  client.py  exceptions.py  types.py
acp-api/tests/: __init__.py  test_client.py
acp-cli/: README.md  pyproject.toml
acp-cli/acp_cli/: main.py
acp-cli/acp_cli/commands/: compile.py  init.py  run.py  validate.py
acp-cli/tests/: __init__.py  test_main.py  test_run.py  test_validate.py
acp-compiler/: pyproject.toml
acp-compiler/acp_compiler/: __init__.py  acp_ast.py  acp_module_loader.py  acp_module_resolver.py  acp_normalizer.py  acp_parser.py  acp_resolver.py  acp_validator.py  compiler.py  ir_generator.py  parser.py  validator.py
acp-compiler/tests/: __init__.py  test_acp_compiler.py  test_acp_normalizer.py  test_acp_parser.py  test_acp_resolver.py  test_acp_validator.py  test_compiler.py  test_credentials.py  test_ir_generator.py  test_module_loader.py  test_module_resolver.py  test_modules.py  test_multifile.py  test_parser.py  test_validator.py
acp-runtime/: pyproject.toml
acp-runtime/acp_runtime/: __init__.py  engine.py  llm.py  logging_config.py  policy.py  state.py
acp-runtime/tests/: __init__.py  test_policy.py  test_state.py  test_tracing.py
acp-schema/: pyproject.toml
acp-schema/acp_schema/: __init__.py  ir.py  version.py
acp-schema/tests/: __init__.py  test_ir.py  test_models.py
agentform-api/: README.md  pyproject.toml
agentform-api/agentform_api/: __init__.py  client.py  exceptions.py  types.py
agentform-api/tests/: __init__.py  test_client.py
agentform-compiler/: README.md  pyproject.toml
agentform-compiler/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+190 more)
agentform-compiler/.mypy_cache/3.11/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+34 more)
agentform-compiler/.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
agentform-compiler/.mypy_cache/3.11/acp_compiler/: credentials.data.json  credentials.meta.json
agentform-compiler/.mypy_cache/3.11/agentform_compiler/: __init__.data.json  __init__.meta.json  agentform_ast.data.json  agentform_ast.meta.json  compiler.data.json  (+21 more)
agentform-compiler/agentform_compiler/: __init__.py  agentform_ast.py  agentform_grammar.lark  agentform_module_loader.py  agentform_module_resolver.py  agentform_normalizer.py  agentform_parser.py  agentform_resolver.py  agentform_validator.py  compiler.py  ir_generator.py  parser.py  validator.py
agentform-compiler/tests/: __init__.py  test_agentform_compiler.py  test_agentform_normalizer.py  test_agentform_parser.py  test_agentform_resolver.py  test_agentform_validator.py  test_compiler.py  test_credentials.py  test_ir_generator.py  test_module_loader.py  test_module_resolver.py  test_modules.py  test_multifile.py  test_parser.py  test_schema.py  test_validator.py
agentform-mcp/: README.md  pyproject.toml
agentform-mcp/agentform_mcp/: __init__.py  client.py  server.py
agentform-mcp/tests/: __init__.py  test_client.py  test_server.py  test_types.py
agentform-runtime/: README.md  pyproject.toml
agentform-runtime/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  (+208 more)
agentform-runtime/agentform_runtime/: __init__.py  engine.py  llm.py  policy.py  state.py  tracing.py
agentform-runtime/tests/: __init__.py  test_llm_schema.py  test_policy.py  test_state.py  test_tracing.py
agentform-schema/: README.md  pyproject.toml
agentform-schema/agentform_schema/: __init__.py  ir.py  models.py  version.py
agentform-schema/tests/: __init__.py  test_ir.py  test_models.py
(+9685 files in other folders)
