[tool.poetry]
name = "acp-api"
version = "0.0.801"
description = "Python SDK for programmatic ACP usage"
authors = ["ACP Team"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "acp_api"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.dependencies]
python = "^3.11"
acp-schema = {path = "../acp-schema", develop = true}
acp-compiler = {path = "../acp-compiler", develop = true}
acp-runtime = {path = "../acp-runtime", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^4.1"
ruff = "^0.8"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
