[tool.poetry]
name = "acp-cli"
version = "0.0.803"
description = "CLI interface for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "acp_cli"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.scripts]
acp = "acp_cli.main:app"

# Note: For local development, use path dependencies via poetry install in the root
# The CI workflow bundles all modules into acp_cli/ before publishing

[tool.poetry.dependencies]
python = "^3.11"
# CLI dependencies
typer = ">=0.12,<1.0"
rich = "^13.7"
structlog = "^24.1.0"
# From acp-schema
pydantic = "^2.5"
pyyaml = "^6.0"
# From acp-compiler
lark = "^1.1"
# From acp-mcp
anyio = "^4.2"
# From acp-runtime
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-anthropic = "^0.3"

[tool.poetry.group.dev.dependencies]
# Path dependencies for local development
acp-schema = {path = "../acp-schema", develop = true}
acp-mcp = {path = "../acp-mcp", develop = true}
acp-compiler = {path = "../acp-compiler", develop = true}
acp-runtime = {path = "../acp-runtime", develop = true}
# Test and lint dependencies
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^4.1"
ruff = "^0.8"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
