[tool.poetry]
name = "acp-runtime"
version = "0.0.803"
description = "Workflow execution engine for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "acp_runtime"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.dependencies]
python = "^3.11"
acp-schema = {path = "../acp-schema", develop = true}
acp-mcp = {path = "../acp-mcp", develop = true}
acp-compiler = {path = "../acp-compiler", develop = true}
pydantic = "^2.5"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-anthropic = "^0.3"
anyio = "^4.2"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^4.1"
ruff = "^0.8"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

