[tool.poetry]
name = "acp-schema"
version = "0.0.803"
description = "Core data models and YAML schemas for ACP"
authors = ["ACP Team"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "acp_schema"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/acp-team/acp"
"Repository" = "https://github.com/acp-team/acp"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
ruff = "^0.14"
mypy = "^1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

