[tool.poetry]
name = "agentform-compiler"
version = "0.0.811"
description = "Agentform native schema compilation and validation"
authors = ["Agentform Team"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "agentform_compiler"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/agentform-team/agentform"
"Repository" = "https://github.com/agentform-team/agentform"

[tool.poetry.dependencies]
python = "^3.11"
agentform-schema = {path = "../agentform-schema", develop = true}
agentform-mcp = {path = "../agentform-mcp", develop = true}
pydantic = "^2.5"
pyyaml = "^6.0"
lark = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
ruff = "^0.14"
mypy = "^1.8"
types-PyYAML = "^6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

